# python-project-83

./: .env  .env-copy  .gitignore  Makefile  README.md  build.sh  database.sql  debug.sh  pyproject.toml  requirements.txt  setup.cfg  wsgi.py
.github/workflows/: lint.yml
page_analyzer/: .env  Procfile  __init__.py  app.py  db.py  repository.py  routes.py  tmp_dummy_data.py  url_checks_repository.py  urls_repository.py  validator.py
page_analyzer/repositories/: __init__.py  base_repository.py  url_checks_repository.py  urls_repository.py
page_analyzer/services/: parse_url.py  url_checker.py  utils.py
page_analyzer/templates/: base.html  index.html  not_found_url.html  url.html  urls.html
page_analyzer/templates/partials/: base_header.html  footer.html  header.html
tests/: test_app.py
